# fenvoy

./: .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md
formal/: fenvoy_protocol_pv1.pv
formal/proverif/2026-03-04_v1/: fenvoy_protocol_2026-03-04_v1.pv
formal/tamarin/2026-03-04_v1/: fenvoy_protocol_2026-03-04_v1.spthy
src/: error.rs  lib.rs  main.rs
src/cli/: config_cmd.rs  daemon.rs  guarded.rs  identity_cmd.rs  identity_ops.rs  mod.rs  output.rs  peers.rs  sas.rs  send.rs  strings.rs  terminal.rs  verify.rs
src/config/: mod.rs  paths.rs
src/crypto/: aead.rs  hybrid.rs  identity.rs  kdf.rs  kem.rs  keyfile.rs  mod.rs  x25519.rs
src/discovery/: mod.rs  multicast.rs
src/peer/: mod.rs  store.rs  verification.rs
src/protocol/: codec.rs  handshake.rs  messages.rs  mod.rs  record.rs
src/transfer/: dir_receiver.rs  dir_sender.rs  mod.rs  progress.rs  receiver.rs  resume.rs  sender.rs
src/transport/: listener.rs  mod.rs  tcp.rs
