[package]
name = "fenvoy"
version = "0.1.0"
edition = "2024"
description = "Peer-to-peer file transfer over LAN"
rust-version = "1.85.1"
license = "MIT OR Apache-2.0"
keywords = ["cryptography", "file-transfer", "peer-to-peer", "post-quantum", "encryption"]
categories = ["command-line-utilities", "cryptography", "network-programming"]
repository = "https://github.com/dhgatjeye/fenvoy"
homepage = "https://github.com/dhgatjeye/fenvoy"
readme = "README.md"

[profile.release]
opt-level = 3
lto = "fat"
strip = "symbols"
debug = false
debug-assertions = false
panic = "abort"
codegen-units = 1
rpath = false

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "fs", "sync", "macros", "time"] }
socket2 = { version = "0.6", features = ["all"] }
libcrux-ml-kem = { version = "0.0.7", features = ["mlkem1024"] }
x25519-dalek = { version = "3.0.0-pre.6", features = ["static_secrets"] }
ed25519-dalek = { version = "3.0.0-pre.6", features = ["rand_core"] }
chacha20poly1305 = "0.11.0-rc.3"
sha2 = "0.11.0-rc.5"
hkdf = "0.13.0-rc.5"
argon2 = "0.6.0-rc.7"
blake3 = "1"
zeroize = { version = "1", features = ["derive"] }
rand_core = "0.10"
getrandom = "0.4"
subtle = { version = "2", features = ["const-generics"] }